welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:88: error: method grandMotif is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
def grandMotif(){
    ^